--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -2,7 +2,7 @@
 .KL__header{
   display: flex;
   height: 100px;
-  border: 1px solid black;
+  // border: 1px solid black;
   @include centreAlign;
   justify-content: unset;
   padding: 0 3rem;
