video carausel on /rough'

--- a/app/components/Header/style.scss
+++ b/app/components/Header/style.scss
@@ -69,6 +69,7 @@
           top: 105%!important;
           left: -824px;
           min-width: 1200px;
+          border-radius: 10px;
         }
       }
     }
