--- a/app/containers/App/style.scss
+++ b/app/containers/App/style.scss
@@ -1,1 +1,34 @@
-import 'semantic-ui-css/semantic.min.css'
+@import '../../styles/base/main.scss';
+.rough{
+  .videoPostersArray{
+    @include spaceBetween;
+    padding: 0 3rem;
+    gap: 1rem;
+    .poster{
+      width: 300px;
+      height: 300px;
+      background-size: cover;
+      background-repeat: no-repeat;
+      @include centreAlign;
+      flex-direction: column;
+      i{
+        font-size: 80px;
+        color: $white;
+        margin: 5rem 0 2rem 0;
+        opacity: 0.3;
+      }
+      p{
+        width: 80%;
+        min-height: 30px;
+        max-height: 50px;
+        padding: 0.4rem 1rem;
+        border-radius: 4px;
+        font-size: 16px;
+        font-weight: 600;
+        @include centreAlign;
+        background-color: $red;
+        color: $white;
+      }
+    }
+  }
+}
