--- a/app/components/Cards/style.scss
+++ b/app/components/Cards/style.scss
@@ -1,22 +1,141 @@
 @import '../../styles//base/main.scss' ;
 .Card1{
-  padding: 1rem;
   width: 250px;
   height: 250px;
   @include centreAlign;
-  background-repeat:no-repeat ;
-  background-size: contain;
+  box-shadow: -2px 3px 10px 0px rgba(54,69,79,0.52);
+  -webkit-box-shadow: -2px 3px 10px 0px rgba(54,69,79,0.52);
+  -moz-box-shadow: -2px 3px 10px 0px rgba(54,69,79,0.52);
+  position: relative;
+  .image{
+    background-repeat:no-repeat ;
+    background-size: contain;
+    height: 100%;
+    width: 100%;
+  }
   .description{
+    width: 250px;
+    height: 250px;
+    padding: 1rem;
     display: none;
-    width: 200px;
-    height: 200px;
+    position: absolute;
+    font-size: 16px;
+    background: rgba(245,245,245,0.6);
+    color: $black;
+    font-weight: 800;
   }
   &:hover{
+    .image{
+      filter: blur(5px);
+      transform: scale(1.1);
+    }
     .description{
       display: block;
-      background-color: $marine-blue ;
-      opacity: 0.3;
-      @include centreAlign;
+      // @include centreAlign;
+    }
+  }
+}
+.Card2{
+  width: 250px;
+  height: 250px;
+  box-shadow: -2px 3px 10px 0px rgba(54,69,79,0.52);
+  -webkit-box-shadow: -2px 3px 10px 0px rgba(54,69,79,0.52);
+  -moz-box-shadow: -2px 3px 10px 0px rgba(54,69,79,0.52);
+  img{
+    width: 100%;
+    height: 75%;
+    object-fit: contain;
+  }
+  .content{
+    width: 100%;
+    height: 25%;
+    background-color: $prim-highlight;
+    padding-top: 0.5rem;
+    // padding: 1rem 1.5rem;
+    .description{
+      width: 100%;
+      color: $white;
+      font-size: 16px;
+      font-weight: 400;
+      text-align: center;
+      margin: 0;
+    }
+    .title{
+      width: 100%;
+      color: $white;
+      font-size: 24px;
+      font-weight: 700;
+      text-align: center;
+      margin: 0;
+      // margin-top: 7px;
+    }
+  }
+  .ribbon{
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    width: 101px;
+    height: 100px;
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    right: 0px;
+    // background-color: red;
+    span{
+      position: absolute;
+      transform: rotate(45deg);
+      display: block;
+      width: 163px;
+      height: fit-content;
+      padding-left: 63px;
+      font-size: 16px;
+      font-weight: 800;
+      background-color: $prim-highlight;
+      text-align: center;
+      // box-shadow: 0 5px 10px rgba(0, 0, 0,10%);
+      color: #fff;
+    }
+  }
+}
+.Card3{
+  width: 350px;
+  padding: 1rem;
+  box-shadow: -2px 3px 10px 0px rgba(54,69,79,0.52);
+  -webkit-box-shadow: -2px 3px 10px 0px rgba(54,69,79,0.52);
+  -moz-box-shadow: -2px 3px 10px 0px rgba(54,69,79,0.52);
+  height: 550px;
+  max-height: 550px;
+  border-radius: 14px;
+  img{
+    border-style: none;
+    min-width: 100%;
+    max-width: 100%;
+    height: 200px;
+    object-fit: contain;
+  }
+  .Card3content{
+    @include centreAlign;
+    height: 350px;
+    flex-direction: column;
+    .Card3title{
+      font-size: 24px;
+      font-weight: 700;
+      color: $prim-highlight;
+    }
+    .Card3description{
+      text-align: center;
+      font-size: 16px;
+      font-weight: 500;
+      color: $darkGrey;
+      margin: 0;
+    }
+    button{
+      width: 130px;
+      margin-bottom: 2.4rem;
+      margin-top: auto;
+      height: 40px;
+      font-size: 16px;
+      font-weight: 700;
     }
   }
 }
