--- a/app/containers/App/style.scss
+++ b/app/containers/App/style.scss
@@ -1,5 +1,25 @@
 @import '../../styles/base/main.scss';
+
+.topGreenBar{
+  width: 100%;
+  height: 1rem;
+  background-color: $primary-green;
+  position: fixed;
+  z-index: 100;
+  top: 0;
+  left: 0;
+}
+
+
+
+
+
 .rough{
+  .demoCard1,.demoCard2{
+    @include centreAlign;
+    gap: 1rem;
+    margin: 1rem;
+  }
   .videoPostersArray{
     @include spaceBetween;
     padding: 0 3rem;
