--- a/app/containers/AboutUs/style.scss
+++ b/app/containers/AboutUs/style.scss
@@ -1,6 +1,6 @@
 @import '../../styles/base/main.scss';
 .AboutUS{
-  margin-top: 114px;
+  // margin-top: 114px;
   .header{
     width: 100%;
     height: 100px;
