--- a/app/containers/App/style.scss
+++ b/app/containers/App/style.scss
@@ -10,8 +10,25 @@
   left: 0;
 }
 
+body::-webkit-scrollbar {
+  width: 1em;
+}
 
+body::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
 
+body::-webkit-scrollbar-thumb {
+background-color: $primary-green;
+outline: none;
+border-radius: 4px;
+}
+#mainBody{
+  margin-top: 114px;
+}
+#mainBody.noHeader{
+  margin-top: 10px;
+}
 
 
 .rough{
