--- a/app/containers/Home/style.scss
+++ b/app/containers/Home/style.scss
@@ -100,6 +100,19 @@
   .latestProducts{
     background-color: $white;
     padding: 3rem 1.5rem 0rem 1.5rem;
+    overflow-x: auto;
+    &::-webkit-scrollbar {
+      width: 1em;
+    }
+    &::-webkit-scrollbar-track {
+      -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    }
+    
+    &::-webkit-scrollbar-thumb {
+    background-color: $prim-highlight;
+    outline: none;
+    border-radius: 4px;
+    }
     .title{
       font-size: 64px;
       font-weight: 800;
