--- a/app/containers/Home/style.scss
+++ b/app/containers/Home/style.scss
@@ -116,7 +116,7 @@
     .title{
       font-size: 64px;
       font-weight: 800;
-      color: $primary-green;
+      color: $prim-highlight;
       text-align: center;
       margin-bottom: 3rem;
       width: 100%;
@@ -124,7 +124,7 @@
     .description{
       font-size: 24px;
       font-weight: 600;
-      color: $primary-green;
+      color: $prim-highlight;
       text-align: center;
       margin-bottom: 3rem;
     }
