--- a/app/components/Header/style.scss
+++ b/app/components/Header/style.scss
@@ -8,11 +8,11 @@
   background: white;
   z-index: 100;
   // border: 1px solid black;
-  @include centreAlign;
-  justify-content: unset;
+  @include spaceBetween;
   padding: 0 3rem;
   .ui.image{
-    width: 30%;
+    // width: 30%;
+    min-width: 100px;
     @include centreAlign;
     justify-content: flex-start;
     img{
@@ -23,13 +23,14 @@
   .KL__header_menu{
     display: flex;
     @include spaceBetween;
-    width: 70%;
+    // width: 70%;
     height: 100%;
     // margin-right: 20px;
     .menuItem{
       @include centreAlign;
       margin: 0;
       width: 20%;
+      min-width: 160px;
       height: 100%;
       font-size: 18px;
       font-weight: 800;
