made site responsive exccept header

--- a/app/components/Footer/style.scss
+++ b/app/components/Footer/style.scss
@@ -4,12 +4,18 @@
   justify-content: space-between;
   padding: 1rem 3rem ;
   background-color: $primary-green;
+  flex-wrap: wrap;
+  gap: 2rem;
+  @media  (max-width: 625px) {
+    // display: none;
+    justify-content: center;
+  }
   .mapouter{position:relative;text-align:right;height:200px;width:200px;}
   .gmap_canvas {overflow:hidden;background:none!important;height:200px;width:200px;}
   .info,.location{
     margin-bottom: auto;
     h3{
-      font-size: 18px;
+      font-size: 36px;
       font-weight: 600;
       color: $white;
     }
@@ -24,6 +30,9 @@
         margin-left: 1rem;
       }
     }
+  }
+  .info{
+    min-width: 250px;
   }
   .location{
     margin-right: 4rem;
