--- a/app/containers/Home/style.scss
+++ b/app/containers/Home/style.scss
@@ -1,8 +1,19 @@
 @import '../../styles/base/main.scss';
 .homePage{
+  .carrausel{
+    @media (max-width : 890px) {
+      // object-fit: contain;
+      height: fit-content;
+    }
+    img{
+      @media (max-width : 890px) {
+        object-fit: contain;
+      }
+    }
+  }
   .KLife__info{
     background-color: $primary-green;
-    padding: 3rem 1.5rem 0rem 1.5rem;
+    padding: 5rem 1.5rem 2rem 1.5rem;
     .title{
       font-size: 64px;
       font-weight: 800;
@@ -10,13 +21,31 @@
       width: 100%;
       text-align: center;
       margin-bottom: 3rem;
+      span{
+        white-space: nowrap;
+      }
     }
     .points{
       @include centreAlign;
+      gap: 10rem;
+      // flex-wrap: wrap;
+      @media (max-width : 1140px) {
+        gap: 6rem;
+      }
+      @media (max-width : 1000px) {
+        gap: 5rem;
+      }
+      @media (max-width : 960px) {
+        gap: 0;
+        flex-direction: column;
+      }
+      
       .point{
         @include centreAlign;
         flex-direction: column;
-        width: 30%;
+        // width: 30%;
+        max-width: 250px;
+        margin-bottom: auto;
         img{
           width: 250px;
           height: 250px;
@@ -27,13 +56,15 @@
           font-size: 24px;
           font-weight: 600;
           margin-bottom: 4rem;
+          width: 100%;
+          text-align: center;
         }
       }
     }
   }
   .marqeeProducts{
     background-color: $prim-highlight;
-    padding: 3rem 1.5rem 0rem 1.5rem;
+    padding: 5rem 1.5rem;
     .title{
       font-size: 64px;
       font-weight: 800;
@@ -41,6 +72,13 @@
       text-align: center;
       margin-bottom: 3rem;
       width: 100%;
+      @media  (max-width: 400px) {
+        font-size: 60px;
+      }
+      @media  (max-width: 350px) {
+        font-size: 48px;
+      }
+
     }
     .description{
       font-size: 24px;
@@ -56,7 +94,8 @@
       padding: 2rem 16rem;
       gap: 1rem;
       .product{
-        width: 300px;
+        min-width: 300px;
+        max-width: 300px;
         margin-bottom : 2rem;
         cursor: pointer;
         .image{
@@ -95,12 +134,19 @@
           }
         }
       }
+      @media  (max-width: 1100px) {
+        //do Smth
+        flex-direction: column;
+        // justify-content: center;
+        @include centreAlign;
+        padding: 0;
+      }
     }
   }
   .latestProducts{
     background-color: $white;
     padding: 3rem 1.5rem 0rem 1.5rem;
-    overflow-x: auto;
+    // overflow-x: auto;
     &::-webkit-scrollbar {
       width: 1em;
     }
@@ -120,6 +166,10 @@
       text-align: center;
       margin-bottom: 3rem;
       width: 100%;
+      @media  (max-width: 400px) {
+        font-size: 48px;
+      }
+
     }
     .description{
       font-size: 24px;
@@ -131,14 +181,46 @@
     .products{
       display: flex;
       gap: 3rem;
-      padding: 0 7rem;
-      justify-content: space-between;
+      padding: 0 6%;
+      // width: 80%;
+      // max-width: 80%;
+      justify-content: center;
+      position: relative;
+      @media  (max-width: 720px) {
+        //do Smth
+        padding: 0;
+      }
+
       i{
         margin-top: auto;
+        position: absolute;
         margin-bottom: auto;
         color: $darkGrey;
         &:hover{
           color: $prim-highlight;
+        }
+        top: 250px;
+        left: 0;
+        &:last-of-type{
+          left: unset;
+          top: 250px;
+          right: 0;
+        }
+        @media  (max-width: 500px) {
+          display: none;
+        }
+      }
+      .product{
+        @media  (max-width: 1280px) {
+          &:last-of-type{
+            display: none;
+          }
+        }
+        @media  (max-width: 960px) {
+          display: none;
+          &:first-of-type{
+            display: block;
+          }
         }
       }
     }
