--- a/app/components/Carausel/style.scss
+++ b/app/components/Carausel/style.scss
@@ -1,11 +1,11 @@
 @import '../../styles/base/main.scss';
 .carrausel{
-  height: 500px;
+  height: 600px;
   position: relative;
   img{
     width: 100%;
     height: 100%;
-    // object-fit: cover;
+    object-fit: cover;
   }
   .actions{
     width: fit-content;
