--- a/app/containers/Home/style.scss
+++ b/app/containers/Home/style.scss
@@ -76,7 +76,7 @@
         font-size: 60px;
       }
       @media  (max-width: 350px) {
-        font-size: 48px;
+        font-size: 45px;
       }
 
     }
@@ -91,7 +91,7 @@
     .products{
       display: flex;
       justify-content: space-between;
-      padding: 2rem 16rem;
+      padding: 2rem 4%;
       gap: 1rem;
       .product{
         min-width: 300px;
@@ -110,9 +110,6 @@
             object-fit: contain;
             // // transform: scaleY(1.15);
           }
-          &:hover{
-            transform: scale(1.1);
-          }
         }
         .title{
           width: 100%;
@@ -130,7 +127,12 @@
         }
         &:hover{
           .title{
-              transform: scale(1.1);
+            font-size: 24px;
+          }
+          .image{
+            img{
+              transform: scale(1.1)
+            }
           }
         }
       }
@@ -187,8 +189,11 @@
       justify-content: center;
       position: relative;
       @media  (max-width: 720px) {
-        //do Smth
         padding: 0;
+      }
+      @media  (max-width: 1280px) and (min-width : 1000px) {
+        padding: 0;
+        gap: 2rem;
       }
 
       i{
@@ -206,17 +211,26 @@
           top: 250px;
           right: 0;
         }
-        @media  (max-width: 500px) {
+        @media  (max-width: 1100px) {
           display: none;
         }
       }
       .product{
-        @media  (max-width: 1280px) {
-          &:last-of-type{
-            display: none;
+        @media  (max-width: 1280px) and (min-width : 1000px) {
+          // &:last-of-type{
+          //   display: none;
+          // }
+          .Card3{
+            width: 300px;
+            .Card3content{
+              height: 365px;
+              .Card3description{
+                margin-top: 1rem;
+              }
+            }
           }
         }
-        @media  (max-width: 960px) {
+        @media  (max-width: 1000px) {
           display: none;
           &:first-of-type{
             display: block;
