--- a/app/components/Header/style.scss
+++ b/app/components/Header/style.scss
@@ -147,6 +147,11 @@
         max-width: 100vw;
         min-width: 100vw;
         max-height: 600px;
+        overflow-y: auto;
+        z-index: 100000;      
+        @media (max-width : 700px) {
+          max-height: unset;
+        }
         .dropdownContentInnerWrapper{
           position: relative;
           .closeIcon{
@@ -187,7 +192,8 @@
               gap: 3rem;        
               @media (max-width : 700px) {
                 flex-direction: column;  
-                margin-top: 13rem;
+                // margin-top: 13rem;
+                max-height: unset;
               }
               .productCategory{
                 max-width: 350px;
