--- a/app/containers/Home/style.scss
+++ b/app/containers/Home/style.scss
@@ -12,15 +12,15 @@
     }
   }
   .KLife__info{
-    background-color: $primary-green;
+    background-color: $white;
     padding: 5rem 1.5rem 2rem 1.5rem;
     .title{
       font-size: 64px;
       font-weight: 800;
-      color: $white;
+      color: $primary-green;
       width: 100%;
       text-align: center;
-      margin-bottom: 3rem;
+      margin-bottom: 4rem;
       span{
         white-space: nowrap;
       }
@@ -52,7 +52,7 @@
           object-fit: contain;
         }
         .label{
-          color: $white;
+          color: $primary-green;
           font-size: 24px;
           font-weight: 600;
           margin-bottom: 4rem;
