--- a/app/containers/Home/style.scss
+++ b/app/containers/Home/style.scss
@@ -57,6 +57,7 @@
           font-weight: 600;
           margin-bottom: 4rem;
           width: 100%;
+          opacity: 80%;
           text-align: center;
         }
       }
