--- a/app/containers/AboutUs/style.scss
+++ b/app/containers/AboutUs/style.scss
@@ -56,7 +56,8 @@
     }
     min-height: 200px;
     width: 100%;
-    background-color: rgba(131, 207, 200, 0.7);
+    // background-color: rgba(131, 207, 200, 0.7);
+    background-color: $white;
     padding: 2rem 20%;
     font-size: 24px;
     line-height: 35px;
