--- a/app/containers/App/style.scss
+++ b/app/containers/App/style.scss
@@ -72,4 +72,80 @@ border-radius: 4px;
       }
     }
   }
+  .ProductCards{
+    background-color: $backgroundGreen;
+    width: 100%;
+    // height: 500px;
+    // max-height: 500px;
+    margin-top: 2rem;
+    padding: 4rem 2rem;
+    .cardExample1{
+      width: 300px;
+      // border: 1px solid $darkGrey;
+      height: 450px;
+      max-height: 450px;
+      box-shadow: 0 0 4px $darkGrey;
+      background-color: $white;
+      // filter: drop-shadow(0px 0px 12px rgba(0, 0, 0, 0.25));
+      box-shadow: 0px 0px 12px 0px rgba(85 ,85,85,65%);;
+      // border-radius: 24px;
+      // @include boxShadow1;
+      .image{
+        width: 100%;
+        height: 250px;
+        img{
+          width: 100%;
+          height: 100%;
+          object-fit: contain;
+        }
+      }
+      .content{
+        padding: 2.5rem 0 2rem;
+        .title{
+          text-align: center;
+          font-size: 24px;
+          line-height: 22px;
+          font-weight: 800;
+          margin: 0.5rem 0 1.5rem;
+          color: $darkGrey;
+          height: 40px;
+          @include centreAlign;
+          // color: $darkGrey;
+          // opacity: 60%;
+        }
+        .model{
+          text-align: center;
+          margin: 1rem auto;
+          margin-top: 1rem;
+          color: $sec-highlight ;
+          padding: 0.2rem 0.9rem;
+          border-radius: 46px;
+          border: 1px solid #0077C8;
+          box-shadow: 0px 0px 6px 1px rgba(0, 119, 200, 0.4);
+          font-size: 14px;
+          line-height: 16px;
+          width: fit-content;
+          font-weight: 600;
+        }
+        .action{
+          margin: 1.2rem auto 0;
+          text-align: center;
+          width: fit-content;
+          padding: 0.2rem 0.7rem;
+          border: 1px solid $primary-green;
+          color: $primary-green;
+          font-size: 17px;
+          font-weight: 500;
+          border-radius: 5px;
+          cursor: pointer;
+          height: 27px;
+          @include centreAlign;
+          // &:hover,&:active,&:focus{
+          //   background-color: $primary-green;
+          //   color: $white;
+          // }
+        }
+      }
+    }
+  }
 }
