--- a/app/styles/base/mixins.scss
+++ b/app/styles/base/mixins.scss
@@ -8,3 +8,8 @@
   justify-content: space-between;
   align-items: center;
 }
+@mixin boxShadow1 {
+  box-shadow: -7px 7px 7px -2px rgba(85,85,85,0.83);
+  -webkit-box-shadow: -7px 7px 7px -2px rgba(85,85,85,0.83);
+  -moz-box-shadow: -7px 7px 7px -2px rgba(85,85,85,0.83);
+}
