--- a/app/components/ContactUs/style.scss
+++ b/app/components/ContactUs/style.scss
@@ -50,6 +50,14 @@
           font-size: 16px;
           color: $darkGrey;
         }
+        @media  (max-width: 600px){
+          min-width: 250px;
+          max-width: 80vw;
+        }
+        @media  (max-width: 300px){
+          min-width: 200px;
+          max-width: 80vw;
+        }
       }
       textarea{
         height: 100px;
