--- a/app/components/Header/style.scss
+++ b/app/components/Header/style.scss
@@ -158,7 +158,7 @@
           // max-height: 100vh;
           overflow-y: auto;
           min-width: 100vw;
-          min-height: 850px;
+          min-height: 100vh;
           padding: 0;
           // padding-top: 21rem;
         }
@@ -167,7 +167,7 @@
           max-height: 650px;
           @media (max-width : 700px) {
             max-height: unset;
-            min-height: 850px;
+            min-height: 100vh;
           }
           .closeIcon{
             position: absolute;
