--- a/app/components/Header/style.scss
+++ b/app/components/Header/style.scss
@@ -181,7 +181,8 @@
               object-fit: cover;
             }
             @media (max-width : 700px) {
-              top: 42px;
+              // top: 42px;
+              right: 35px;
             }
           }
           .menuItem{
