--- a/app/containers/App/style.scss
+++ b/app/containers/App/style.scss
@@ -151,7 +151,8 @@ border-radius: 4px;
 }
 #app{
   @media  (max-width: 400px) {
-    max-width: 98vw;
+    width: 99.5vw;
+    max-width: 99.5vw;
     margin: 0 auto;
   }
 }
