product page font size adjust for phone screen

--- a/app/components/Products/ProductDetail/style.scss
+++ b/app/components/Products/ProductDetail/style.scss
@@ -151,6 +151,9 @@
     .title{
       width: 100%;
       color: $prim-highlight;
+      @media  (max-width: 400px) {
+        font-size: 38px;
+      }
     }
     .content{
       @include centreAlign;
