--- a/app/containers/App/style.scss
+++ b/app/containers/App/style.scss
@@ -31,6 +31,9 @@ border-radius: 4px;
   margin-top: 114px;
   #K_LIFE_loader{
     display: none;
+    width: 100%;
+    min-height: 400px;
+    @include centreAlign;
     .loader  {
       animation: rotate 1s infinite;  
       height: 50px;
