--- a/app/components/ContactUs/style.scss
+++ b/app/components/ContactUs/style.scss
@@ -75,4 +75,11 @@
       cursor: pointer;
     }
   }
+  
+  // @media  (max-width: 300px){
+  //   width: 143vw;
+  //   .modal{
+  //     max-width: 350px;
+  //   }
+  // }
 }
