--- a/app/components/Header/style.scss
+++ b/app/components/Header/style.scss
@@ -5,7 +5,7 @@
   top: 1rem;
   z-index: 100;
   width: 100%;
-  transition: top 1s ease-in-out;
+  transition: top 0.2s linear;
   .bigHeader{
     height: 100%;
     display: flex;
@@ -14,7 +14,7 @@
     // border: 1px solid black;
     @include spaceBetween;
     padding: 0 3rem;
-    .ui.image{
+    image{
       // width: 30%;
       min-width: 100px;
       @include centreAlign;
@@ -37,7 +37,8 @@
         min-width: 160px;
         height: 100%;
         font-size: 18px;
-        font-weight: 800;
+        cursor: pointer;
+        font-weight: 600;
         color: $darkGrey;
         border-bottom: 4px solid $white;
         &:hover{
@@ -45,76 +46,83 @@
           color: $prim-highlight;
         }
       }
-      .ui.simple.dropdown.menuItem{
-        .menu.menu.transition.visible{
+      .menuItem.prodcutsMenu{
+        position: relative;
+        .dropdownMenu{
+          position: absolute;
+          top: 100px;
+          display: none;
           border: none;
           border-radius: 10px;
-          &:hover{
+          padding: 2rem;
+          min-width: 300px;
+          background-color: $white;
+          top: 104.4%!important;
+          left: -780px;
+          min-width: 1200px;
+          border-radius: 10px;
+          box-shadow: 0 0 8px rgba(85, 85, 85, 50%);
+          .products{
+            width: 100%;
+            @include spaceBetween;
+            padding-top: 0;
+            padding-bottom: 2rem !important;
             border: none;
-            border-radius: 10px;
-          }
-        }
-        .item.products{
-          width: 100%;
-          @include spaceBetween;
-          padding-top: 0;
-          padding-bottom: 2rem !important;
-          border: none;
-          &:hover{
-            border: none;
-            background-color: $white;
-            border-radius: 10px;
-            background: white;
-          }
-          .productCategory{
-            width: 350px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            // border-right: 1px solid $grey;
-            margin: 1.5rem 0;
-            margin-bottom: auto;
-            &:last-of-type{
+            &:hover{
               border: none;
+              background-color: $white;
+              border-radius: 10px;
+              background: white;
             }
-            .header{
-              width: 70%;
-              height: 50px;
-              @include centreAlign;
-              background-color: $primary-green;
-              color: white;
-              border-radius: 6px;
-              font-size: 20px;
-            }
-            .productItem{
-              color: $darkGrey;
-              font-size: 16px;
-              line-height: 20px;
-              font-weight: 600;
-              &:hover{
-                color: $primary-green;
+            .productCategory{
+              width: 350px;
+              display: flex;
+              flex-direction: column;
+              align-items: center;
+              justify-content: center;
+              // border-right: 1px solid $grey;
+              margin: 1.5rem 0;
+              margin-bottom: auto;
+              &:last-of-type{
+                border: none;
               }
-            }
-            &:nth-child(2){
               .header{
-                background-color: $yellow;
+                width: 70%;
+                height: 50px;
+                @include centreAlign;
+                background-color: $primary-green;
+                color: white;
+                border-radius: 6px;
+                font-size: 22px;
               }
-            }
-            &:nth-child(3){
-              .header{
-                background-color: $blue;
+              .productItem{
+                color: $darkGrey;
+                font-size: 18px;
+                line-height: 20px;
+                cursor: pointer;
+                font-weight: 600;
+                &:hover{
+                  color: $primary-green;
+                }
+              }
+              &:nth-child(2){
+                .header{
+                  background-color: $yellow;
+                }
+              }
+              &:nth-child(3){
+                .header{
+                  background-color: $blue;
+                }
               }
             }
           }
         }
         &:hover{
-          .menu.transition{
-            top: 104.4%!important;
-            left: -700px;
-            min-width: 1200px;
-            border-radius: 10px;
+          .dropdownMenu{
+            display: block;
           }
+
         }
       }
     }
@@ -128,7 +136,7 @@
     background: white;
     // border: 1px solid black;
     padding: 0 3rem;
-    .ui.image{
+    .image{
       margin-right: auto;
     }
     .dropdown{
@@ -292,5 +300,5 @@
 }
 .KL__header.hidden_header{
   // display: none;
-  top: -5773px;
+  top: -8rem;
 }
