--- a/app/components/Carausel/style.scss
+++ b/app/components/Carausel/style.scss
@@ -1,7 +1,8 @@
 @import '../../styles/base/main.scss';
 .carrausel{
-  height: 600px;
+  height: 500px;
   position: relative;
+  transition: all 1s linear;
   img{
     width: 100%;
     height: 100%;
@@ -12,14 +13,12 @@
     position: absolute;
     bottom: 0;
     right: 0;
-    i{
+    @include centreAlign;
+    margin-right: 1rem;
+    .icon{
       width: 40px;
       height: 40px;
-      color: $darkGrey;
       cursor: pointer;
-      &:hover{
-        color: $prim-highlight;
-      }
     }
   }
 }
