--- a/app/components/Footer/style.scss
+++ b/app/components/Footer/style.scss
@@ -25,6 +25,9 @@
       font-weight: 500;
       color: $white;
       margin: 0 0 6px 0;
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
       a{
         text-decoration: none;
         color: $white;
