--- a/app/containers/AboutUs/style.scss
+++ b/app/containers/AboutUs/style.scss
@@ -1,6 +1,7 @@
 @import '../../styles/base/main.scss';
 .AboutUS{
   // margin-top: 114px;
+  transition: all 1s linear;
   .header{
     width: 100%;
     height: 100px;
