--- a/app/components/Header/style.scss
+++ b/app/components/Header/style.scss
@@ -223,6 +223,7 @@
                 flex-direction: column;  
                 // margin-top: 13rem;
                 max-height: unset;
+                gap: 0;
               }
               .productCategory{
                 max-width: 350px;
@@ -233,7 +234,8 @@
                 margin-bottom: auto;
                 padding: 0 ;
                 flex-wrap: wrap;
-                @media (max-width : 700px) {
+                @media (max-width : 960px) {
+                  margin-top: 0;
                   &:last-of-type{
                     padding-bottom: 3rem;
                   }
