--- a/app/components/Products/DisplayProducts/style.scss
+++ b/app/components/Products/DisplayProducts/style.scss
@@ -2,6 +2,9 @@
 .displayProducts{
   background-color: $backgroundGreen;
   padding: 6rem 3rem ;
+  @media (max-width : 1000px){
+    padding: 6rem 0rem ;
+  }
   .title{
     text-align: center;
     font-size: 48px;
@@ -16,40 +19,26 @@
     margin: 2rem 0;
   }
   .products{
-    // @include spaceBetween;
-    // gap: 6rem;
-    // padding: 0;
     width: 100%;
-    // margin:  0;
-    // flex-wrap: wrap;
-    
-    table{
-      width: 100%;
-      border-collapse: separate;
-      border-spacing: 0 6rem;
-      tr{
-        .product{
-          // @include centreAlign;  
-          // @include centreAlign;
-          // width: 25%;
-          margin: 4rem 0;
-          .Card4{
-            margin: 0 auto;
-          }
-          &:first-of-type,&:last-of-type,&:nth-child(2){
-            // width: 300px !important;
-          }
+    display: grid;
+    grid-template-columns: 31% 31% 31%;
+    gap: 4rem 2rem ;
+    margin: 4rem auto;
+    justify-content: center;
+    @media (max-width : 1000px){
+      grid-template-columns: auto;
+    }
+    .product{
+      @include centreAlign;
+      @media (max-width : 310px){
+        .Card4{
+          width: 250px;
+          min-width: unset;
         }
       }
-      @media  (max-width: 1100px) {
-        border-spacing: 0;
-        tr{
-          .product{
-            @include centreAlign;
-            &:last-of-type{
-              margin-bottom: 0;
-            }
-          }
+      @media (max-width : 310px){
+        .Card4{
+          width: 200px;
         }
       }
     }
