--- a/app/components/Products/ProductDetail/style.scss
+++ b/app/components/Products/ProductDetail/style.scss
@@ -198,7 +198,8 @@
     }
   }
   .products{
-    // @include spaceBetween;
+    // @include centreAlign;
+    // flex-direction: column;
     // gap: 6rem;
     // padding: 0;
     width: 100%;
@@ -207,32 +208,27 @@
     .title{
       margin-bottom: 0;
     }
-    table{
+    .productList{
       width: 100%;
-      border-collapse: separate;
-      border-spacing: 0 6rem;
-      tr{
-        .product{
-          // @include centreAlign;  
-          // @include centreAlign;
-          // width: 25%;
-          margin: 4rem 0;
+      display: grid;
+      grid-template-columns: 31% 31% 31%;
+      gap: 4rem 2rem ;
+      margin: 4rem auto;
+      justify-content: center;
+      @media (max-width : 1000px){
+        grid-template-columns: auto;
+      }
+      .product{
+        @include centreAlign;
+        @media (max-width : 310px){
           .Card4{
-            margin: 0 auto;
-          }
-          &:first-of-type,&:last-of-type,&:nth-child(2){
-            // width: 300px !important;
+            width: 250px;
+            min-width: unset;
           }
         }
-      }
-      @media  (max-width: 1100px) {
-        border-spacing: 0;
-        tr{
-          .product{
-            @include centreAlign;
-            &:last-of-type{
-              margin-bottom: 0;
-            }
+        @media (max-width : 310px){
+          .Card4{
+            width: 200px;
           }
         }
       }
