--- a/app/containers/Home/style.scss
+++ b/app/containers/Home/style.scss
@@ -218,6 +218,7 @@
         }
       }
       .product{
+        transition: opacity 0.5s linear;
         .Card3{
           -webkit-transition: opacity 10s ease-in-out;
             -moz-transition: opacity 10s ease-in-out;
